RACK: fix an issue triggered by using the CDG CC module

Obtained from:		rrs@
MFC after:		3 days
PR:			238741
Sponsored by:		Netlix, Inc.